--- a/fasta.html
+++ b/fasta.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formatos FASTA e FASTQ</title>
+  <title>FASTA e FASTQ</title>
 
   <!-- Importa o CSS do Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -26,7 +26,7 @@
 
 <body>
   <div class="container">
-    <h1>🧬 Formatos Biológicos</h1>
+    <h1>🧬 Arquivos Biológicos</h1>
 
     <div class="card">
       <div class="card-body">
